<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.navigation.ui.NavigationDetailsFragment">
    
    <EditText
        android:id="@+id/nav_form_name"
        android:minWidth="128dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nav_form_name_hint"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <EditText
        android:id="@+id/nav_form_address"
        android:minWidth="128dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nav_form_address_hint"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_form_name" />
    
    <EditText
        android:id="@+id/nav_form_telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="128dp"
        android:hint="@string/nav_form_telephone_hint"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_form_address" />
    
    <Button
        android:id="@+id/nav_details_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_details_submit"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_form_telephone" />

</androidx.constraintlayout.widget.ConstraintLayout>