<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.lifecycle.ui.LifcycleAwareActivity">
    
    <TextView
        android:id="@+id/lifecycle_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lifecycle_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <Button
        android:id="@+id/lifecycle_aware_close_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lifecycle_aware_update"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifecycle_note" />
    
    <Button
        android:id="@+id/lifecycle_unaware_close_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lifecycle_unaware_update"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifecycle_aware_close_update" />
    
</androidx.constraintlayout.widget.ConstraintLayout>