<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.room.ui.RoomFragment">
    
    <LinearLayout
        android:id="@+id/room_data_add_layout"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >
    
        <EditText
            android:id="@+id/room_data_input_id"
            android:hint="@string/room_data_hint_id"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:background="@drawable/textview_border"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="26dp" />
        
        <EditText
            android:id="@+id/room_data_input_name"
            android:hint="@string/room_data_hint_name"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:background="@drawable/textview_border"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="26dp" />
    
        <EditText
            android:id="@+id/room_data_input_description"
            android:hint="@string/room_data_hint_description"
            android:background="@drawable/textview_border"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="26dp" />
    
        <Button
            android:id="@+id/add_entry"
            android:text="@string/room_data_add"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="54dp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/room_data_delete_layout"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_data_add_layout"
        app:layout_constraintEnd_toEndOf="parent" >
        
        <EditText
            android:id="@+id/room_data_delete_id"
            android:hint="@string/room_data_hint_delete_id"
            android:background="@drawable/textview_border"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="26dp" />
        
        <Button
            android:id="@+id/delete_entry"
            android:text="@string/room_data_delete"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="54dp" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/data_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_data_delete_layout" />
    
</androidx.constraintlayout.widget.ConstraintLayout>